--- a/QuanLyHocSinh/static/css/Administrator/Report.css
+++ b/QuanLyHocSinh/static/css/Administrator/Report.css
@@ -10,6 +10,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+
 }
 
 main {
@@ -20,10 +21,12 @@ main {
     background-color: #212529;
     color: #fff;
     text-align: center;
-    padding: 1em 0;
+    padding: 0.5rem 0;
     position: fixed;
     bottom: 0;
     width: 100%;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
     font-size:1.2rem;
 }
+
+
