--- a/QuanLyHocSinh/templates/Administrator/Report.html
+++ b/QuanLyHocSinh/templates/Administrator/Report.html
@@ -4,6 +4,11 @@
 Báo cáo thống kê
 {% endblock %}
 
+{% block css %}
+ <link href="{{ url_for('static', filename='css/Administrator/Report.css') }}" rel="stylesheet">
+{% endblock %}
+
+
 {% block content %}
 <div class="container mt-4">
     <!-- Tiêu đề -->
