--- a/QuanLyHocSinh/templates/base.html
+++ b/QuanLyHocSinh/templates/base.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>{% block title %}Trang chính{% endblock %}</title>
-    <link href="{{ url_for('static', filename='css/Administrator/Report.css') }}" rel="stylesheet">
+    {% block css %}
+    <!--CSS tại đây-->
+    {% endblock %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -19,13 +21,19 @@
             <div class="collapse navbar-collapse" id="mynavbar">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="javascript:void(0)">Báo cáo thống kê</a>
+                        <a class="nav-link" href="{{url_for('report')}}">Báo cáo thống kê</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="javascript:void(0)">Chỉnh sửa quy định</a>
+                        <a class="nav-link" href="{{url_for('rule')}}">Chỉnh sửa quy định</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="javascript:void(0)">Link</a>
+                    </li>
+                </ul>
+                  <!-- Chuyển Đăng xuất qua phải -->
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link logout-btn" href="javascript:void(0)">Đăng xuất</a>
                     </li>
                 </ul>
             </div>
