--- a/QuanLyHocSinh/templates/Administrator/base.html
+++ b/QuanLyHocSinh/templates/Administrator/base.html
@@ -8,6 +8,8 @@
     <!--CSS tại đây-->
     {% endblock %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+
 </head>
 <body>
 <!-- Header -->
@@ -27,7 +29,7 @@
                         <a class="nav-link" href="{{url_for('rule')}}">Chỉnh sửa quy định</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="javascript:void(0)">Link</a>
+                        <a class="nav-link" href="{{url_for('subject_mng')}}">Quản lý môn học</a>
                     </li>
                 </ul>
                   <!-- Chuyển Đăng xuất qua phải -->
