--- a/QuanLyHocSinh/templates/Administrator/Report.html
+++ b/QuanLyHocSinh/templates/Administrator/Report.html
@@ -61,7 +61,7 @@ Báo cáo thống kê
                 <tr>
                     <td>{{ class.className }}</td>
                     <td>{{class.students|length}}</td>
-                    <td></td>
+                    <td>{{average_score}}</td>
                     <td></td>
 
                 </tr>
