--- a/QuanLyHocSinh/templates/staff/student-form.html
+++ b/QuanLyHocSinh/templates/staff/student-form.html
@@ -1,10 +1,10 @@
 <form id="student-form">
     <label for="name">Họ và tên:</label>
     <input type="text" id="name" name="name" required>
-    
+
     <label for="dob">Ngày sinh:</label>
     <input type="date" id="dob" name="dob" required>
-    
+
     <label for="gender">Giới tính:</label>
     <select id="gender" name="gender">
         <option value="Nam">Nam</option>
@@ -19,7 +19,7 @@
 
     <label for="email">Email:</label>
     <input type="email" id="email" name="email">
-    
+
     <label for="class">Lớp:</label>
     <select id="class" name="class">
         <option value="1">10C1</option>
@@ -28,8 +28,10 @@
     </select>
 
     <div class="btn-add-student">
+        {% block buttonContent %}
         <button type="button" id="add-student">
-            <span>Thêm học sinh</span>
+            <span>Hoàn Tất</span>
         </button>
+        {% endblock %}
     </div>
 </form>
