--- a/QuanLyHocSinh/templates/staff/staff.html
+++ b/QuanLyHocSinh/templates/staff/staff.html
@@ -1,24 +1,17 @@
 <!DOCTYPE html>
-{% extends "base.html" %}
+{% extends "staff/base.html" %}
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% block title %}Quản Lý Học Sinh{% endblock %}
-    <link rel="stylesheet" href="../../static/css/staff/staff.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+    {% block privateCss %}
+    <title>Quản Lý Lớp Học</title>
+    <link href="{{ url_for('static', filename='css/staff/staff.css') }}" rel="stylesheet">
+    {%endblock%}
 </head>
 <body>
     {%block menu%}
         {%include 'staff/menu.html'%}
     {%endblock%}
+    {% block content %}
     <div class="container">
         <h2>Tiếp nhận học sinh</h2>
         <!-- Phần 1: Tiếp nhận học sinh -->
@@ -26,14 +19,13 @@
             {%block studentform%}
                 {%include 'staff/student-form.html'%}
             {%endblock%}
-            {% block content %}
             <form class="logo">
                 <div class="img-logo">
                     <img src="../../static/images/Logo_THPT_Chu_Van_An.jpg" alt="pic">
                 </div>
             </form>
-            {% endblock %}
         </section>
     </div>
+    {% endblock %}
 </body>
 </html>
