update report and rule management

--- a/QuanLyHocSinh/templates/Administrator/Report.html
+++ b/QuanLyHocSinh/templates/Administrator/Report.html
@@ -50,7 +50,7 @@ Báo cáo thống kê
 
     <!-- Bảng thống kê -->
     <div id="report-section" class="mt-4">
-        <h4 class="text-center">Bảng thống kê điểm</h4>
+        <h4 class="text-center"> Thống kê điểm môn <strong>{{ subject_name }}</strong> - Học kỳ <strong>{{ semester_name }}</strong></h4>
         <div style="max-height: 280px; overflow-y: auto;">
             <table class="table table-bordered table-striped">
                 <thead>
