update student add

--- a/QuanLyHocSinh/templates/staff/StudentEdit.html
+++ b/QuanLyHocSinh/templates/staff/StudentEdit.html
@@ -15,9 +15,11 @@
     <div class="container">
     <h2>Nguyễn Văn A</h2>
     <section class="input-students">
+        <form id="student-form">
         {%block studentform%}
                 {%include 'staff/student-form.html'%}
             {%endblock%}
+        </form>
     </section>
 </div>
 {% endblock %}
