--- a/QuanLyHocSinh/templates/Administrator/CreateUser.html
+++ b/QuanLyHocSinh/templates/Administrator/CreateUser.html
@@ -11,13 +11,18 @@ Tạo tài khoản người dùng
 {% block content %}
 
 <!-- Hiển thị thông báo flash -->
-{% with messages = get_flashed_messages() %}
-{% if messages %}
-<div class="alert alert-success">
-    {{ messages[0] }}
-</div>
-{% endif %}
+{% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+        <div class="alert-container">
+            {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        </div>
+    {% endif %}
 {% endwith %}
+
 
 <div class="container mt-4">
     <h2 class="text-center mb-4">Tạo tài khoản người dùng</h2>
