--- a/QuanLyHocSinh/static/css/Administrator/UserManagement.css
+++ b/QuanLyHocSinh/static/css/Administrator/UserManagement.css
@@ -1,23 +1,3 @@
-*{
-    border:0;
-    padding:0;
-    font-family: Tahoma;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-
-}
-
-main {
-    flex: 1; /* Đẩy footer xuống đáy */
-}
-
 .custom-footer {
     background-color: #212529;
     color: #fff;
@@ -28,9 +8,8 @@ main {
     width: 100%;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
     font-size:1.2rem;
+    margin-top: 2rem;
 }
-
-
 .logout-btn{
     font-size:1.2rem !important;
 }
@@ -41,5 +20,12 @@ main {
     transition: ease 0.7s;
 }
 
-
-
+table th {
+    position: sticky;
+    top: 0;
+    background-color: #343a40; /* Đảm bảo header có màu nền khi cuộn */
+    z-index: 1; /* Đảm bảo header luôn hiển thị trên các dòng */
+}
+.div-table{
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.4);
+}
