--- a/QuanLyHocSinh/static/css/Administrator/edit_user.css
+++ b/QuanLyHocSinh/static/css/Administrator/edit_user.css
@@ -1,36 +1,16 @@
-*{
-    border:0;
-    padding:0;
-    font-family: Tahoma;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-
-}
-
-main {
-    flex: 1; /* Đẩy footer xuống đáy */
-}
-
 .custom-footer {
     background-color: #212529;
     color: #fff;
     text-align: center;
     padding: 0.5rem 0;
-    position: fixed;
+    position: sticky;
     bottom: 0;
     width: 100%;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
     font-size:1.2rem;
+    margin-top: 2rem;
+
 }
-
-
 .logout-btn{
     font-size:1.2rem !important;
 }
@@ -41,5 +21,6 @@ main {
     transition: ease 0.7s;
 }
 
-
-
+.container{
+    margin-top: 4rem
+}
