--- a/QuanLyHocSinh/templates/Administrator/base.html
+++ b/QuanLyHocSinh/templates/Administrator/base.html
@@ -31,6 +31,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{url_for('subject_mng')}}">Quản lý môn học</a>
                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="{{url_for('user_mng')}}">Quản lý người dùng</a>
+                    </li>
                 </ul>
                   <!-- Chuyển Đăng xuất qua phải -->
                 <ul class="navbar-nav ms-auto">
