--- a/QuanLyHocSinh/templates/Administrator/edit_subject.html
+++ b/QuanLyHocSinh/templates/Administrator/edit_subject.html
@@ -1,5 +1,10 @@
 {% extends 'Administrator/base.html' %}
 
+{% block title %}
+Chỉnh sửa môn học
+{% endblock %}
+
+
 {% block css %}
 <link href="{{ url_for('static', filename='css/Administrator/edit_subject.css') }}" rel="stylesheet">
 {% endblock %}
