--- a/QuanLyHocSinh/templates/Administrator/UserManagement.html
+++ b/QuanLyHocSinh/templates/Administrator/UserManagement.html
@@ -10,12 +10,12 @@ Quản lý người dùng
 
 {% block content %}
 {% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}
-        <div class="alert alert-{{ messages[0][0] }} alert-dismissible fade show" role="alert">
-            {{ messages[0][1] }}
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-    {% endif %}
+{% if messages %}
+<div class="alert alert-{{ messages[0][0] }} alert-dismissible fade show" role="alert">
+    {{ messages[0][1] }}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+{% endif %}
 {% endwith %}
 
 
@@ -28,7 +28,7 @@ Quản lý người dùng
 
 
     <div class="table-responsive div-table">
-        <div style="max-height: 280px; overflow-y: auto;">
+        <div style="max-height: 350px; overflow-y: auto;">
             <table class="table table-striped table-hover">
                 <thead class="table-dark">
                 <tr>
@@ -60,8 +60,8 @@ Quản lý người dùng
                         <button class="btn btn-sm btn-primary me-2">
                             <a href="{{ url_for('edit_user', user_id=user.id) }}" class="text-white">Chỉnh sửa</a>
                         </button>
-                          <!-- Form xóa người dùng -->
-                        <form action="{{ url_for('delete_user') }}" method="POST" style="display:inline;" onsubmit="return confirm('Bạn có chắc muốn xóa người dùng này không?')">
+                        <!-- Form xóa người dùng -->
+                        <form action="/delete_user" method="POST">
                             <input type="hidden" name="user_id" value="{{ user.id }}">
                             <button type="submit" class="btn btn-danger">Xóa</button>
                         </form>
