--- a/QuanLyHocSinh/templates/staff/staff.html
+++ b/QuanLyHocSinh/templates/staff/staff.html
@@ -20,6 +20,11 @@
                 {%block studentform%}
                     {%include 'staff/student-form.html'%}
                 {%endblock%}
+                <div class="btn-add-student">
+                    <button type="submit" id="add-student">
+                        <span>Hoàn Tất</span>
+                    </button>
+                </div>
             </form>
             <form class="logo">
                 <div class="img-logo">
